WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70546
Flipped-blocks writing mode blocks do not hit-test their overflow
https://bugs.webkit.org/show_bug.cgi?id=70546
Summary
Flipped-blocks writing mode blocks do not hit-test their overflow
mitz
Reported
2011-10-20 14:05:20 PDT
Flipped-blocks writing mode blocks do not hit test their overflow
Attachments
Flip the overflow rect when hit-testing
(3.65 KB, patch)
2011-10-20 14:07 PDT
,
mitz
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-10-20 14:07:29 PDT
Created
attachment 111846
[details]
Flip the overflow rect when hit-testing
mitz
Comment 2
2011-10-20 14:27:33 PDT
Fixed in <
http://trac.webkit.org/r98022
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug