Flipped-blocks writing mode blocks do not hit test their overflow https://bugs.webkit.org/show_bug.cgi?id=70546

Reviewed by Sam Weinig.

Source/WebCore:

Test: fast/writing-mode/flipped-blocks-hit-test-overflow.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::nodeAtPoint): Flip the overflow rect if necessary.

LayoutTests:

* fast/writing-mode/flipped-blocks-hit-test-overflow-expected.txt: Added.
* fast/writing-mode/flipped-blocks-hit-test-overflow.html: Added.



Canonical link: https://commits.webkit.org/86734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98022 268f45cc-cd09-0410-ab3c-d52691b4dbfc